fix(select) : add missing background color

--- a/packages/react/src/components/select/Select.module.scss
+++ b/packages/react/src/components/select/Select.module.scss
@@ -35,6 +35,7 @@
 
   .select-wrapper {
     @include elevation-neutral-inner-shadow;
+    background-color: var(--background-default);
     display: flex;
     min-width: 112px;
     min-height: 32px;
